fuse7cxfRest/src/main/fabric8/camel-webservice-http-route.yml
apiVersion: v1
kind: Route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fuse7cxfrest-http
    weight: 100
  wildcardPolicy: None
status: {}
