fuse7cxfRest/src/main/fabric8/camel-webservice-rest-route.yml
apiVersion: v1
kind: Route
spec:
  port:
    targetPort: 9098
  to:
    kind: Service
    name: fuse7cxfrest-rest
    weight: 100
  wildcardPolicy: None
status: {}
